--- a/ui/ui-kit/styles/pwa.css
+++ b/ui/ui-kit/styles/pwa.css
@@ -30,6 +30,7 @@ body {
   -ms-content-zooming: none;
   -ms-touch-action: pan-x pan-y pinch-zoom;
   touch-action: pan-x pan-y pinch-zoom;
+  -webkit-tap-highlight-color: transparent;
   transform: translateZ(0);
   overflow: hidden;
   overflow: clip;
@@ -59,7 +60,7 @@ body.no-scroll {
   overflow: hidden;
 }
 
-app-root[unresolved] {
+alwatr-pwa[unresolved] {
   display: block;
   text-align: center;
   /* TODO: skeleton */
