--- a/ui/ui-kit/styles/token/spacing.css
+++ b/ui/ui-kit/styles/token/spacing.css
@@ -8,20 +8,12 @@
   --sys-breakpoint-large-screen: 1440px;
 
   --sys-spacing-column-1: calc(
-    (
-        100vw - var(--sys-spacing-side-padding) * 2 - var(--sys-spacing-gutter) *
-          (var(--sys-column-count) - 1)
-      ) / var(--sys-column-count)
+    (100vw - var(--sys-spacing-side-padding) * 2 - var(--sys-spacing-gutter) * (var(--sys-column-count) - 1))
+    / var(--sys-column-count)
   );
-  --sys-spacing-column-2: calc(
-    var(--sys-spacing-column-1) * 2 + var(--sys-spacing-gutter)
-  );
-  --sys-spacing-column-3: calc(
-    var(--sys-spacing-column-1) * 3 + var(--sys-spacing-gutter) * 2
-  );
-  --sys-spacing-column-4: calc(
-    var(--sys-spacing-column-1) * 4 + var(--sys-spacing-gutter) * 3
-  );
+  --sys-spacing-column-2: calc(var(--sys-spacing-column-1) * 2 + var(--sys-spacing-gutter));
+  --sys-spacing-column-3: calc(var(--sys-spacing-column-1) * 3 + var(--sys-spacing-gutter) * 2);
+  --sys-spacing-column-4: calc(var(--sys-spacing-column-1) * 4 + var(--sys-spacing-gutter) * 3);
 
   /* < 600px */
   --sys-column-count: 4;
