--- a/ui/ui-kit/styles/token/typography.css
+++ b/ui/ui-kit/styles/token/typography.css
@@ -4,25 +4,14 @@
   --ref-font-weight-medium: 500;
   --ref-font-weight-bold: 700;
 
-  --ref-font-family-system:
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    'Roboto',
-    'Oxygen',
-    'Ubuntu',
-    'Cantarell',
-    'Open Sans',
-    'Helvetica Neue',
-    'Arial',
-    sans-serif,
-    'Apple Color Emoji',
-    'Segoe UI Emoji',
-    'Segoe UI Symbol'
-  ;
-  --sys-font-family-plain: var(--ref-font-family-vazirmatn), var(--ref-font-family-system);
-  --sys-font-family-brand: var(--ref-font-family-vazirmatn), var(--ref-font-family-system);
+  --ref-font-family-system: system-ui, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Open Sans',
+    'Helvetica Neue', 'Arial', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+    'Segoe UI Symbol';
+  --sys-font-family-plain: var(--ref-font-family-vazirmatn),
+    var(--ref-font-family-system);
+  --sys-font-family-brand: var(--ref-font-family-vazirmatn),
+    var(--ref-font-family-system);
 
   /* display - large */
   --sys-typescale-display-large-font-family-name: var(--sys-font-family-brand);
@@ -49,7 +38,9 @@
   --sys-typescale-headline-large-line-height: 4rem;
   --sys-typescale-headline-large-letter-spacing: 0rem;
   /* headline - medium */
-  --sys-typescale-headline-medium-font-family-name: var(--sys-font-family-brand);
+  --sys-typescale-headline-medium-font-family-name: var(
+    --sys-font-family-brand
+  );
   --sys-typescale-headline-medium-font-weight: var(--ref-font-weight-regular);
   --sys-typescale-headline-medium-font-size: 2.8rem;
   --sys-typescale-headline-medium-line-height: 3.6rem;
