--- a/uniquely/ui/agah-pwa/src/styles/index.css
+++ b/uniquely/ui/agah-pwa/src/styles/index.css
@@ -11,9 +11,11 @@ html {
     hsla(var(--ref-palette-primary5)),
     hsla(var(--ref-palette-primary10))
   );
+  height: 100%;
 }
 
 body {
+  height: 100%;
   background: transparent;
   --_max-mobile-size: calc(51 * var(--sys-spacing-track));
 }
